feat: full hypixel lmao
Took 4 hours 42 minutes